add initial resources for home view; add resources for first viewcomponent; test on home and in postform fragment; configure localization services; test

--- a/AspNetMvcSocial/Views/Home/Index.cshtml
+++ b/AspNetMvcSocial/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = @Localizer["PageTitle"];
 }
 <div class="center" id="center">
     @await Component.InvokeAsync("PostForm")
