--- a/AspNetMvcSocial/Views/Home/Index.cshtml
+++ b/AspNetMvcSocial/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
+﻿@inject IViewLocalizer Localizer
 
 @{
     ViewData["Title"] = @Localizer["PageTitle"];
