--- a/AspNetMvcSocial/Views/_ViewImports.cshtml
+++ b/AspNetMvcSocial/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using AspNetMvcSocial.Models
 @using App.Infrastructure.Data
 @using AspNetMvcSocial.Data
+@using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
