localize trends, start at least...

--- a/AspNetMvcSocial/Views/Shared/_Trends.cshtml
+++ b/AspNetMvcSocial/Views/Shared/_Trends.cshtml
@@ -1,6 +1,8 @@
-﻿<div class="tweetinterest">
+﻿@inject IViewLocalizer Localizer
+
+<div class="tweetinterest">
     <div class="top">
-        <h6>İlgini çekebilecek gündemler <i class="fas fa-cog"></i></h6>
+        <h6>@Localizer["WhatsHappening"] <i class="fas fa-cog"></i></h6>
     </div>
     <div class="toptrend">
         <li>
